--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ With*/.idea/modules.xml
 With*/.idea/jarRepositories.xml
 With*/.idea/compiler.xml
 With*/.idea/libraries/
+With*/*.log
 With*/*.iws
 With*/*.iml
 With*/*.ipr
