--- a/WithLoggingUsingSpoon/pom.xml
+++ b/WithLoggingUsingSpoon/pom.xml
@@ -20,5 +20,17 @@
 			<artifactId>spoon-core</artifactId>
 			<version>10.2.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.19.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.19.0</version>
+		</dependency>
 	</dependencies>
 </project>
