--- a/WithLoggingUsingSpoon/pom.xml
+++ b/WithLoggingUsingSpoon/pom.xml
@@ -32,5 +32,11 @@
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<version>2.19.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
+		</dependency>
 	</dependencies>
 </project>
